# window_clean

./: FIX_GAZEBO_CONFLICT.md  INSTALL.md  README.md  README_INSTALL.md  check_installation.sh  fix_gazebo.sh  install_dependencies.sh  install_gazebo_ros.sh
install/: local_setup.sh  setup.sh
install/windowclean_pro/share/windowclean_pro/: package.bash  package.zsh
log/: latest_build
src/windowclean_pro/: ARCHITECTURE.md  CMakeLists.txt  QUICKSTART.md  package.xml
src/windowclean_pro/docs/: API.md
src/windowclean_pro/launch/: apartment.launch.py  complex.launch.py  office.launch.py  simple_window.launch.py
src/windowclean_pro/plugins/include/: imv_mpu6050_plugin.h  ultrasonic_sensor_plugin.h  vacuum_suction_plugin.h
src/windowclean_pro/plugins/src/: battery_plugin.cpp  differential_drive_controller_plugin.cpp  encoder_plugin.cpp  imv_mpu6050_plugin.cpp  ultrasonic_sensor_plugin.cpp  vacuum_suction_plugin.cpp
src/windowclean_pro/scripts/: battery_monitor_node.py  navigation_controller_node.py  pump_control_node.py  safety_monitor_node.py  ultrasonic_sensor_node.py
src/windowclean_pro/scripts/validation/: test_basic_functionality.py  test_navigation_pattern.py  test_performance_metrics.py
src/windowclean_pro/urdf/: windowclean_pro.urdf.xacro
src/windowclean_pro/worlds/: apartment.world  complex.world  office.world  simple_window.world
